--- a/app-supongo/assets/index.html
+++ b/app-supongo/assets/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./js/index.js"></script>
     <title>Document</title>
 </head>
 
@@ -18,11 +19,11 @@
     <input type="text" name="email" id="email" placeholder="email">
     <input type="password" name="password" id="password" placeholder="password">
     <button id="submit">Login</button>
-
+    <button onclick="startProcess();">paton</button>
     <div>
         <h1 id="logged">No loggeado</h1>
     </div>
-    <script src="index.js"></script>
+    
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js";
